# OpenTraceBroadcaster

./: .gitignore  CMakeLists.txt  CMakePresets.json  MSVC_BUILD.md  README.md  build-msvc.ps1  build.sh  buildspec.json  download-deps.ps1  meson.build  meson_options.txt  package-dependencies.ps1  test-msvc-build.ps1  vcpkg.json
.github/actions/build-plugin/: action.yaml
.github/scripts/: .Aptfile  .Brewfile  Build-Windows.ps1
.github/scripts/utils.zsh/: check_macos  setup_ubuntu
.github/workflows/: build-project.yaml  build.yml  ci.yml  release.yml
cmake/common/: FindOpenTraceCapture.cmake
cmake/windows/: helpers.cmake
cross/: macos-arm64.txt
data/locale/: en-US.ini
src/: measurement-overlay.cpp  measurement-reader.cpp  measurement-reader.h  plugin-main.cpp
src/sys/: time.h
